--- a/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
+++ b/Resources/Prototypes/SS220/Catalog/uplink_catalog.yml
@@ -117,7 +117,7 @@
   categories:
   - UplinkPointless
 
-- type: listing 
+- type: listing
   id: UplinkThermalGlasses
   name: uplink-thermal-glasses-name
   description: uplink-thermal-glasses-desc
@@ -129,11 +129,11 @@
   - UplinkWearables
 
 - type: listing
-  id: ThermalVisionImplanter
-  name: uplink-thermal-vision-implanter-name
-  description: uplink-thermal-vision-implanter-desc
+  id: ThermalVisorImplanter
+  name: uplink-thermal-visor-implanter-name
+  description: uplink-thermal-visor-implanter-desc
   icon: {sprite: /Textures/SS220/Misc/ThermalEye.rsi, state: EyeON}
-  productEntity: ThermalVisionImplanter
+  productEntity: ThermalVisorImplanter
   cost:
     Telecrystal: 6
   categories:
