--- a/Resources/Prototypes/SS220/Entities/ThermalVisionGoogles/ThermalVisionProto.yml
+++ b/Resources/Prototypes/SS220/Entities/ThermalVisionGoogles/ThermalVisionProto.yml
@@ -1,7 +1,7 @@
 - type: entity
   parent: ClothingEyesChameleon
   id: ThermalVisorChameleon
-  name: optical thermal scanner
+  name: optical thermal chameleon scanner
   description: Useful both for security and cargonia.
   suffix: ThermalGoogles
   components:
@@ -13,14 +13,14 @@
     - type: ChameleonClothing
       slot: [eyes]
       default: ClothingEyesGlassesThermal
-    - type: HiddenDescription 
+    - type: HiddenDescription
       entries:
-      - label: SS220-hidden-desc-ThermalGoogles-syndicate
+      - label: hidden-desc-ThermalGoogles-syndicate
         whitelistMind:
           components:
             - TraitorRole
             - NukeOperative
-      - label: SS220-hidden-desc-ThermalGoogles-research
+      - label: hidden-desc-ThermalGoogles-research
         jobRequired:
           - ResearchAssistant
           - ResearchDirector
@@ -28,31 +28,43 @@
           - Borg
 
 
-# Proto for future if we want to add this to RND 
-- type: entity  
-  noSpawn: true
+# Proto for future if we want to add this to RND
+- type: entity
   parent: ClothingEyesBase
   id: ThermalVisorRND
-  name: Продвинутые термальные очки
-  description: Созданные на базе устаревшего и уже нерабочего тремального сканера.
-  suffix: ThermalGooglesRND
+  name: Advanced Thermal Glasses
+  description: This glasses alows you to see persons through the walls in finate radius
   components:
     - type: ThermalVisionClothing
+      thermalVisionRadius: 5
     - type: Sprite
       sprite: Clothing/Eyes/Glasses/thermal.rsi
     - type: Clothing
       sprite: Clothing/Eyes/Glasses/thermal.rsi
-    - type: HiddenDescription 
-      entries:
-      - label: SS220-hidden-desc-ThermalGoogles-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
-      - label: SS220-hidden-desc-ThermalGoogles-research
-        jobRequired:
-          - ResearchAssistant
-          - ResearchDirector
-          - Scientist
-          - Borg
-          
+
+
+- type: entity
+  parent: [ClothingEyesBase, ShowSecurityIcons]
+  id: ClothingEyesThermalGlassesSecurity
+  name: Advanced Security Glasses with SecHUD and Thermal Visor
+  description: This glasses provided with SecHUD and Thermal Visor, which alows you to see persons through the walls in finate radius
+  components:
+  - type: ThermalVisionClothing
+    thermalVisionRadius: 5
+  - type: Sprite
+    sprite: SS220/Clothing/Eyes/secthermalglasses.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Eyes/secthermalglasses.rsi
+  - type: FlashImmunity
+  - type: EyeProtection
+    protectionTime: 5
+  - type: Tag
+    tags:
+    - HamsterWearable
+    - WhitelistChameleon
+    - SecDogWearable # Roxi
+  - type: GuideHelp
+    guides:
+    - Security
+  - type: IdentityBlocker
+    coverage: EYES
